welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
val vuBiscuit=false

	def haveBaggle():Boolean =
	{
		while(!estSurBiscuit)
		{
			avance()
		}
	}
